--- a/index.html
+++ b/index.html
@@ -19,17 +19,34 @@
 
         <main>
             <section id="emoji" class="main-parts">            
-                <section id="head">
+                <section id="neutral" class="face">
                     <section id="eyes" class="organ">
-                        <span class="dot"></span>
-                        <span class="dot"></span>
+                        <span class="eye"></span>
+                        <span class="eye"></span>
                     </section>
                     <section id="mouth" class="organ"></section>
                 </section>
+
+                <section id="smile" class="face smile">
+                    <section id="eyes" class="organ">
+                        <span class="eye-smile"></span>
+                        <span class="eye-smile"></span>
+                    </section>
+                    <section id="mouth-smile" class="organ"></section>
+                </section>
+
+                <section id="sad" class="face sad">
+                    <section id="eyes" class="organ">
+                        <span class="eye"></span>
+                        <span class="eye"></span>
+                    </section>
+                    <section id="mouth-sad" class="organ"></section>
+                </section>
             </section>
+            
             <section id="btn" class="main-parts">
-                <button id="btn-good" class="btn">good!</button>
-                <button id="btn-bad" class="btn">bad!</button>
+                <button id="btn-good" class="btn" onclick="toHappy()">good!</button>
+                <button id="btn-bad" class="btn" onclick="toSad()">bad!</button>
             </section>
             <section id="descr" class="main-parts">text about it</section>
         </main>
